--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
         "livewire/livewire": "^3.0",
+        "wireui/heroicons": "^2.9",
         "wireui/wireui": "^2.4"
     },
     "require-dev": {
